# open-aea

./: MANIFEST.in  Makefile  Pipfile  pyproject.toml  tox.ini
.github/workflows/: release.yml  workflow.yml
aea/cli/: generate_all_protocols.py
config/: mkdocs.yml
dockerfiles/deploy/: Dockerfile
dockerfiles/develop/: Dockerfile
dockerfiles/docs/: Dockerfile
dockerfiles/user/: Dockerfile
scripts/: RELEASE_PROCESS.md
